adding code coverage on unitest

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,13 @@
              aria-current="page" href="{{ path('property.index') }}">Acheter</a>
         </li>
       </ul>
+      {% if app.user %}
+        <div class="navbar nav-bar">
+          <div class="nav-item">
+            <a href="{{ path('logout') }}" style="color: white">Se deconnecter</a>
+          </div>
+        </div>
+      {% endif %}
     </div>
   </div>
 </nav>
