--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -3,7 +3,35 @@
 {% block title %}Tous les biens{% endblock %}
 
 {% block body %}
+  <div class="jumbotron mt-4">
+    <div class="container">
+      {{ form_start(form) }}
+      <div class="form-row row align-items-end">
+        <div class="col-md-4">
+          {{ form_row(form.minSurface) }}
+        </div>
+        <div class="col-md-4">
+          {{ form_row(form.maxPrice) }}
+        </div>
+        <div class="col-md-4">
+          <button style="margin-top: auto" class="btn btn-primary">Rechercher</button>
+        </div>
+      </div>
+      {{ form_end(form) }}
+    </div>
+  </div>
   <div class="container mt-4">
     <h1>Voir tous vos biens</h1>
+    <div class="row">
+      {% for property in properties %}
+        <div class="col-md-4">
+          {{ include('property/_property.html.twig') }}
+        </div>
+      {% endfor %}
+    </div>
+
+    <div class="pagination">
+      {{ knp_pagination_render(properties) }}
+    </div>
   </div>
 {% endblock %}
