--- a/templates/admin/option/new.html.twig
+++ b/templates/admin/option/new.html.twig
@@ -2,8 +2,9 @@
 
 {% block body %}
   <div class="container mt-4">
-    <h1>Ajouter un bien</h1>
+    <h1>Ajouter une nouvelle option</h1>
     {# {% include 'admin/property/_form.html.twig' with {form: form, button: 'Ajouter'} %} #}
-    {{ include('admin/property/_form.html.twig', {button: 'Ajouter'}) }}
+    {{ include('admin/option/_form.html.twig', {form: form, button: 'Ajouter'}) }}
   </div>
 {% endblock %}
+
