--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -7,13 +7,16 @@
     <div class="container">
       {{ form_start(form) }}
       <div class="form-row row align-items-end">
-        <div class="col-md-4">
+        <div class="col-md-3">
           {{ form_row(form.minSurface) }}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           {{ form_row(form.maxPrice) }}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
+          {{ form_row(form.options) }}
+        </div>
+        <div class="col-md-3">
           <button style="margin-top: auto" class="btn btn-primary">Rechercher</button>
         </div>
       </div>
