--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,4 +1,8 @@
 <div class="card mb-4">
+  {% if property.filename %}
+{#    <img src="/images/properties/{{ property.filename }}" alt="card-img-top" style="width: 100%; height: auto;">#}
+    <img src="{{ vich_uploader_asset(property) }}" alt="card-img-top"  class="img-fluid" style="width: 100%; height: auto;">
+  {% endif %}
   <div class="card-body">
     <h5 class="card-title">
       <a href="{{ path('property.show', {slug: property.slug, id: property.id}) }}">
